--- a/village/src/App.css
+++ b/village/src/App.css
@@ -1,3 +1,91 @@
 .App {
   text-align: center;
 }
+.Navi {
+  display: flex;
+  justify-content: center;
+  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+}
+
+.Navi div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 12px 0;
+  width: 150px;
+  margin: 15px;
+  font-size: 1.2rem;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 8px;
+  background-image: linear-gradient(120deg, #a6c0fe 0%, #f68084 100%);
+}
+
+h1 {
+  font-family: cursive;
+}
+
+.Smurf {
+  width: 400px;
+  margin: 40px auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  border: solid 1px black;
+  background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
+  border-radius: 20px;
+}
+
+.delete {
+  display: flex;
+  justify-content: center;
+  margin: 20px auto;
+  -moz-box-shadow: inset 0px 1px 0px 0px #efdcfb;
+  -webkit-box-shadow: inset 0px 1px 0px 0px #efdcfb;
+  box-shadow: inset 0px 1px 0px 0px #efdcfb;
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(0.05, #dfbdfa),
+    color-stop(1, #bc80ea)
+  );
+  background: -moz-linear-gradient(top, #dfbdfa 5%, #bc80ea 100%);
+  background: -webkit-linear-gradient(top, #dfbdfa 5%, #bc80ea 100%);
+  background: -o-linear-gradient(top, #dfbdfa 5%, #bc80ea 100%);
+  background: -ms-linear-gradient(top, #dfbdfa 5%, #bc80ea 100%);
+  background: linear-gradient(to bottom, #dfbdfa 5%, #bc80ea 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfbdfa', endColorstr='#bc80ea',GradientType=0);
+  background-color: #dfbdfa;
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+  border: 1px solid #c584f3;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #9752cc;
+  width: 150px;
+}
+
+.delete:hover {
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(0.05, #bc80ea),
+    color-stop(1, #dfbdfa)
+  );
+  background: -moz-linear-gradient(top, #bc80ea 5%, #dfbdfa 100%);
+  background: -webkit-linear-gradient(top, #bc80ea 5%, #dfbdfa 100%);
+  background: -o-linear-gradient(top, #bc80ea 5%, #dfbdfa 100%);
+  background: -ms-linear-gradient(top, #bc80ea 5%, #dfbdfa 100%);
+  background: linear-gradient(to bottom, #bc80ea 5%, #dfbdfa 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#bc80ea', endColorstr='#dfbdfa',GradientType=0);
+  background-color: #bc80ea;
+}
