--- a/village/src/index.css
+++ b/village/src/index.css
@@ -2,4 +2,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-image: url("../../village/src/images/elioli_trolls_16.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
